--- a/styles/submenu.css
+++ b/styles/submenu.css
@@ -7,6 +7,7 @@ ul.expanded {
 }
 a {
     display: block;
+    font-size: 18px;
 }
 
 a.active{
@@ -15,8 +16,10 @@ a.active{
 
 ul li a{
     font-size: 15px;
+    margin:5px 0px 0px 18px ;
 }
 
 ul li a:hover{
     color: rgba(255, 255, 255, 0.705)
 }
+
