--- a/styles/submenu.css
+++ b/styles/submenu.css
@@ -1,6 +1,6 @@
 ul {
     display: none;
-    list-style: none
+    list-style: none;
 }
 ul.expanded {
     display: block;
@@ -15,9 +15,11 @@ a.active{
 }
 
 ul li a{
-    font-size: 15px;
-    margin:5px 0px 0px 18px ;
-}
+    font-size: 16px;
+    padding-left: 38px;
+    margin: 10px 0px 0px 0px;
+    color: rgba(255, 255, 255, 0.897)
+};
 
 ul li a:hover{
     color: rgba(255, 255, 255, 0.705)
