--- a/styles/submenu.css
+++ b/styles/submenu.css
@@ -7,7 +7,9 @@ ul.expanded {
 }
 a {
     display: block;
-    font-size: 18px;
+    font-size: 17px;
+    display: flex;
+    align-items: center;
 }
 
 a.active{
@@ -18,10 +20,9 @@ ul li a{
     font-size: 16px;
     padding-left: 38px;
     margin: 10px 0px 0px 0px;
-    color: rgba(255, 255, 255, 0.897)
 };
 
 ul li a:hover{
-    color: rgba(255, 255, 255, 0.705)
+    color: red;
 }
 
