--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -6,9 +6,9 @@
 .layout2{
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    
+    justify-content: center;
 }
 
 .layout2 h2{
